# sqlite-sparql

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONSUMER_REQUIREMENT_MM.md  CONSUMER_REQUIREMENT_RAILS_SEMANTICA.md  CONSUMER_REQUIREMENT_RS.md  CONSUMER_REQUIREMENT_VvGraph.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
docs/: PLAN_0.1.0.md
docs/plans/: PLAN_0.10.0.md  PLAN_0.11.0.md  PLAN_0.12.0.md  PLAN_0.13.0.md  PLAN_0.14.0.md  PLAN_0.2.0.md  PLAN_0.3.0.md  PLAN_0.4.0.md  PLAN_0.5.0.md  PLAN_0.6.0.md  PLAN_0.7.0.md  PLAN_0.8.0.md  PLAN_0.9.0.md  PLAN_0.9.1.md
docs/reviews/: REVIEW_0.1.0.md
examples/: demo.sql
ruby/: .gitignore  README.md  Rakefile  sqlite-sparql.gemspec
ruby/lib/: sqlite_sparql.rb
ruby/lib/sqlite_sparql/: has_rdf_triples.rb  store.rb  version.rb
ruby/test/: test_has_rdf_triples.rb  test_helper.rb  test_loader.rb  test_store.rb  test_version.rb
src/: dependency_index.rs  error.rs  lib.rs  store.rs
src/functions/: mod.rs  rdf_bulk.rs  rdf_dred.rs  rdf_owl_rl.rs  rdf_owl_rl_consistent.rs  rdf_shacl_core.rs  rdf_triple.rs  sparql_query.rs
src/functions/rdf_owl_rl/: inconsistency.rs  rdf_lists.rs  rules.rs
src/functions/rdf_shacl_core/: constraints.rs  path.rs  validator.rs
src/vtab/: mod.rs  triples_vtab.rs
tests/: integration_test.rs
